--- a/css/style.css
+++ b/css/style.css
@@ -34,17 +34,31 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
+    width: 100%;
+    height: 100%;
     z-index: -1;
-    background: var(--gradient-2);
+    overflow: hidden;
 }
 
 #background-video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    object-fit: cover;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    opacity: 0.15;
+    background: rgba(0, 0, 0, 0.5); /* Yarı saydam siyah katman */
 }
 
 .container {
